--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "test": "test"
   },
   "scripts": {
-    "test": "grunt"
+    "test": "mocha"
   },
   "author": "guozijun",
   "license": "MIT",
   "devDependencies": {
     "chai": "^4.2.0",
-    "grunt": ">=0.4.5",
-    "grunt-mocha": "^0.4.12"
+    "grunt": "^1.0.4",
+    "grunt-mocha-cli": "^5.0.0",
+    "grunt-run": "^0.8.1"
   }
 }
