--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {},
   "devDependencies": {
     "grunt": "^1.0.4",
-    "grunt-contrib-cssmin": "^3.0.0"
+    "grunt-contrib-uglify": "^4.0.1"
   },
   "author": "guozijun",
   "license": "MIT"
